--- a/linkedin_style.css
+++ b/linkedin_style.css
@@ -60,13 +60,16 @@
 			@media only screen and (max-width: 600px) 
 			{
 			    /* For mobile phones width */
-			    
+			    .signup
+			    {
+			    	width: 100%;
+			    }
 			    input
 			    {
 			    	width:100%;
 			    }
 			    button
 			    {
-			    	width: 90%;
+			    	width: 80%;
 			    }
 			}
